--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -17,7 +17,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/hide">
+        android:id="@+id/hide"
+        android:visibility="invisible">
 
         <!-- Top icons -->
         <LinearLayout
